--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
     <div id="root">
       <h1>Hello Harini!!!!</h1>
     </div>
-
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
