--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>React</title>
   </head>
   <body>
     <div id="root">
-      <h1>Hello Harini!!!!</h1>
+      <h1>Not rendered !!</h1>
     </div>
     <script type="module" src="./app.js"></script>
   </body>
